# flywheel

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: game.rs  panic.rs
src/: ecs.rs  engine.rs  geometry.rs  lib.rs
src/ecs/: archetype.rs  component_manager.rs  component_pool.rs  entity.rs  entity_data.rs  entity_manager.rs  manager.rs  noop_hasher.rs  resource_manager.rs  system.rs  type_id_hasher.rs  world.rs
src/engine/: context.rs  ffi.rs
src/engine/ffi/: sdl3.rs
src/geometry/: angle.rs  matrix.rs  traits.rs  vector.rs
