[package]
name = "flywheel"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }

[features]
serde = ["dep:serde"]
