[package]
name = "flywheel"
version = "0.1.2"
edition = "2024"
description = "Open-source, cross-platform 2.5D game engine built on SDL3."
documentation = "https://docs.rs/flywheel/latest/flywheel/"
repository = "https://github.com/zanadoman/flywheel.git"
license = "Zlib"
keywords = ["gamedev", "game", "graphics", "engine", "flywheel"]
categories = ["game-engines", "rendering", "graphics"]

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }

[features]
serde = ["dep:serde"]
